# neural_circuits

./: main.py  pyproject.toml
data/circuits/: test_circuit.json
data/params/: linear_defaults.yaml  linear_small.yaml  linear_test.yaml
neural_circuits/: bio.py  draw.py  monte_carlo.py  waveform.py
neural_circuits/modeling/: bio.py  channel.py  empirical.py  physics.py  units.py
neural_circuits/neuron/: build.py  neuron_o0.py  neuron_o1.py  neuron_o15.py  neuron_o2.py  tune.py  utils.py
scripts/: dev_bio.py  dev_bio2.py  dev_neuron.py  dev_neuron2.py  dev_neuron3.py  dev_tune.py  dev_waveform.py  dev_waveform2.py  find_good_params.py  show_colors.py  test_interf.py  test_random_vectors.py
