[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "neural_circuits"
version = "0.1.0"
description = "just modeling neural circuits to understand them better"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[tool.setuptools.packages.find]
where = ["."]
include = ["neural_circuits*"]
exclude = ["tests*", "docs*", "scripts*"]